@@ -12,6 +12,7 @@
 - vipsthumbnail has --rotate auto-rotate option
 - removed embedded thumbnail reader from vipsthumbnail: embedded thumbnails
   are too unlike the main image
+- fix to vipsthumbnail --crop, thanks Alessandro 
 
 6/3/14 started 7.38.6
 - grey ramp minimum was wrong
